test/asm/syntax-error-after-syntax-error.err
ERROR: syntax-error-after-syntax-error.asm(6):
    syntax error, unexpected newline
ERROR: syntax-error-after-syntax-error.asm(7):
    syntax error, unexpected newline
ERROR: syntax-error-after-syntax-error.asm(8):
    syntax error, unexpected number
ERROR: syntax-error-after-syntax-error.asm(9):
    'mac' already defined at syntax-error-after-syntax-error.asm(1)
ERROR: syntax-error-after-syntax-error.asm(10):
    'mac' already defined at syntax-error-after-syntax-error.asm(1)
error: Assembly aborted (5 errors)!
